# ParticleSim

./: .gitignore  CMakeLists.txt  Readme.md
src/: main.cpp  renderer.hpp  solver.hpp
